@@ -51,7 +51,6 @@ import io.trino.sql.ir.Constant;
 import io.trino.sql.ir.Expression;
 import io.trino.sql.ir.FieldReference;
 import io.trino.sql.ir.IsNull;
-import io.trino.sql.ir.Logical;
 import io.trino.sql.ir.Row;
 import io.trino.sql.ir.WhenClause;
 import io.trino.sql.planner.RelationPlanner.PatternRecognitionComponents;
@@ -84,6 +83,7 @@ import io.trino.sql.planner.plan.WindowNode;
 import io.trino.sql.tree.Delete;
 import io.trino.sql.tree.FetchFirst;
 import io.trino.sql.tree.FrameBound;
+import io.trino.sql.tree.FunctionCall;
 import io.trino.sql.tree.FunctionCall.NullTreatment;
 import io.trino.sql.tree.Join;
 import io.trino.sql.tree.LambdaArgumentDeclaration;
@@ -158,6 +158,7 @@ import static io.trino.sql.ir.IrExpressions.not;
 import static io.trino.sql.ir.IrUtils.and;
 import static io.trino.sql.planner.GroupingOperationRewriter.rewriteGroupingOperation;
 import static io.trino.sql.planner.LogicalPlanner.failFunction;
+import static io.trino.sql.planner.LogicalPlanner.noTruncationCast;
 import static io.trino.sql.planner.OrderingTranslator.sortItemToSortOrder;
 import static io.trino.sql.planner.PlanBuilder.newPlanBuilder;
 import static io.trino.sql.planner.ScopeAware.scopeAwareKey;
@@ -174,7 +175,9 @@ import static io.trino.sql.tree.WindowFrame.Type.ROWS;
 import static io.trino.type.IntervalDayTimeType.INTERVAL_DAY_TIME;
 import static io.trino.type.IntervalYearMonthType.INTERVAL_YEAR_MONTH;
 import static java.lang.String.format;
+import static java.util.Locale.ENGLISH;
 import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.toUnmodifiableList;
 
 class QueryPlanner
 {
@@ -253,7 +256,7 @@ class QueryPlanner
         ImmutableList.Builder<NodeAndMappings> recursionSteps = ImmutableList.builder();
 
         // plan anchor relation
-        Relation anchorNode = union.getRelations().get(0);
+        Relation anchorNode = union.getRelations().getFirst();
         RelationPlan anchorPlan = new RelationPlanner(analysis, symbolAllocator, idAllocator, lambdaDeclarationToSymbolMap, plannerContext, outerContext, session, recursiveSubqueries)
                 .process(anchorNode, null);
 
@@ -314,14 +317,13 @@ class QueryPlanner
         NodeAndMappings checkConvergenceStep = copy(recursionStep, mappings);
         Symbol countSymbol = symbolAllocator.newSymbol("count", BIGINT);
         ResolvedFunction function = plannerContext.getMetadata().resolveBuiltinFunction("count", ImmutableList.of());
-        WindowNode.Function countFunction = new WindowNode.Function(function, ImmutableList.of(), DEFAULT_FRAME, false);
+        WindowNode.Function countFunction = new WindowNode.Function(function, ImmutableList.of(), Optional.empty(), DEFAULT_FRAME, false, false);
 
         WindowNode windowNode = new WindowNode(
                 idAllocator.getNextId(),
                 checkConvergenceStep.getNode(),
                 new DataOrganizationSpecification(ImmutableList.of(), Optional.empty()),
                 ImmutableMap.of(countSymbol, countFunction),
-                Optional.empty(),
                 ImmutableSet.of(),
                 0);
 
@@ -552,6 +554,8 @@ class QueryPlanner
         List<Symbol> columnSymbols = columnSymbolsBuilder.build();
         Symbol operationSymbol = symbolAllocator.newSymbol("operation", TINYINT);
         assignmentsBuilder.put(operationSymbol, new Constant(TINYINT, (long) DELETE_OPERATION_NUMBER));
+        Symbol caseNumberSymbol = symbolAllocator.newSymbol("case_number", INTEGER);
+        assignmentsBuilder.put(caseNumberSymbol, new Constant(INTEGER, 0L));
         Symbol projectedRowIdSymbol = symbolAllocator.newSymbol(rowIdSymbol.name(), rowIdType);
         assignmentsBuilder.put(projectedRowIdSymbol, rowIdSymbol.toSymbolReference());
         assignmentsBuilder.put(symbolAllocator.newSymbol("insert_from_update", TINYINT), new Constant(TINYINT, 0L));
@@ -574,7 +578,8 @@ class QueryPlanner
                         Optional.empty(),
                         tableMetadata.table(),
                         paradigmAndTypes,
-                        findSourceTableHandles(projectNode)),
+                        findSourceTableHandles(projectNode),
+                        ImmutableListMultimap.of()),
                 projectNode.getOutputSymbols(),
                 partitioningScheme,
                 outputs);
@@ -587,7 +592,7 @@ class QueryPlanner
 
         List<ColumnSchema> dataColumnSchemas = mergeAnalysis.getDataColumnSchemas();
         List<ColumnHandle> dataColumnHandles = mergeAnalysis.getDataColumnHandles();
-        List<ColumnHandle> updatedColumnHandles = mergeAnalysis.getMergeCaseColumnHandles().get(0);
+        List<ColumnHandle> updatedColumnHandles = mergeAnalysis.getMergeCaseColumnHandles().getFirst();
 
         ImmutableMap.Builder<String, ColumnHandle> nameToHandleBuilder = ImmutableMap.builder();
         for (int columnIndex = 0; columnIndex < mergeAnalysis.getDataColumnSchemas().size(); columnIndex++) {
@@ -597,7 +602,7 @@ class QueryPlanner
 
         io.trino.sql.tree.Expression[] orderedColumnValuesArray = new io.trino.sql.tree.Expression[updatedColumnHandles.size()];
         node.getAssignments().forEach(assignment -> {
-            String name = assignment.getName().getValue();
+            String name = assignment.getName().getValue().toLowerCase(ENGLISH);
             ColumnHandle handle = nameToHandle.get(name);
             int index = updatedColumnHandles.indexOf(handle);
             if (index >= 0) {
@@ -745,9 +750,9 @@ class QueryPlanner
                 .process(merge.getTarget());
 
         // Assign a unique id to every target table row
-        Symbol uniqueIdSymbol = symbolAllocator.newSymbol("unique_id", BIGINT);
+        Symbol targetUniqueIdSymbol = symbolAllocator.newSymbol("target_unique_id", BIGINT);
         RelationPlan planWithUniqueId = new RelationPlan(
-                new AssignUniqueId(idAllocator.getNextId(), targetTablePlan.getRoot(), uniqueIdSymbol),
+                new AssignUniqueId(idAllocator.getNextId(), targetTablePlan.getRoot(), targetUniqueIdSymbol),
                 mergeAnalysis.getTargetTableScope(),
                 targetTablePlan.getFieldMappings(),
                 outerContext);
@@ -768,8 +773,16 @@ class QueryPlanner
         RelationPlan source = new RelationPlanner(analysis, symbolAllocator, idAllocator, lambdaDeclarationToSymbolMap, plannerContext, outerContext, session, recursiveSubqueries)
                 .process(merge.getSource());
 
+        // Assign a unique id to every source table row
+        Symbol sourceUniqueIdSymbol = symbolAllocator.newSymbol("source_unique_id", BIGINT);
+        RelationPlan sourcePlanWithUniqueId = new RelationPlan(
+                new AssignUniqueId(idAllocator.getNextId(), source.getRoot(), sourceUniqueIdSymbol),
+                source.getScope(),
+                source.getFieldMappings(),
+                outerContext);
+
         RelationPlan joinPlan = new RelationPlanner(analysis, symbolAllocator, idAllocator, lambdaDeclarationToSymbolMap, plannerContext, outerContext, session, recursiveSubqueries)
-                .planJoin(merge.getPredicate(), Join.Type.RIGHT, mergeAnalysis.getJoinScope(), planWithPresentColumn, source, analysis.getSubqueries(merge)); // TODO: ir
+                .planJoin(merge.getPredicate(), Join.Type.RIGHT, mergeAnalysis.getJoinScope(), planWithPresentColumn, sourcePlanWithUniqueId, analysis.getSubqueries(merge)); // TODO: ir
 
         PlanBuilder subPlan = newPlanBuilder(joinPlan, analysis, lambdaDeclarationToSymbolMap, session, plannerContext);
 
@@ -780,6 +793,7 @@ class QueryPlanner
         Metadata metadata = plannerContext.getMetadata();
         List<ColumnSchema> dataColumnSchemas = mergeAnalysis.getDataColumnSchemas();
         ImmutableList.Builder<WhenClause> whenClauses = ImmutableList.builder();
+        Map<ColumnHandle, io.trino.sql.tree.Expression> defaultColumnValues = mergeAnalysis.getDefaultColumnValues();
         Set<ColumnHandle> nonNullableColumnHandles = mergeAnalysis.getNonNullableColumnHandles();
         for (int caseNumber = 0; caseNumber < merge.getMergeCases().size(); caseNumber++) {
             MergeCase mergeCase = merge.getMergeCases().get(caseNumber);
@@ -813,10 +827,17 @@ class QueryPlanner
                 }
                 else {
                     Expression expression = field.toSymbolReference();
-                    if (mergeCase instanceof MergeInsert && nonNullableColumnHandles.contains(dataColumnHandle)) {
+                    if (mergeCase instanceof MergeInsert) {
                         ColumnSchema columnSchema = dataColumnSchemas.get(fieldNumber);
-                        String columnName = columnSchema.getName();
-                        expression = new Coalesce(expression, new Cast(failFunction(metadata, CONSTRAINT_VIOLATION, "NULL value not allowed for NOT NULL column: " + columnName), columnSchema.getType()));
+                        if (defaultColumnValues.containsKey(dataColumnHandle)) {
+                            io.trino.sql.tree.Expression defaultExpression = defaultColumnValues.get(dataColumnHandle);
+                            expression = subPlan.rewrite(defaultExpression);
+                            expression = noTruncationCast(metadata, expression, expression.type(), columnSchema.getType());
+                        }
+                        if (nonNullableColumnHandles.contains(dataColumnHandle)) {
+                            String columnName = columnSchema.getName();
+                            expression = new Coalesce(expression, new Cast(failFunction(metadata, CONSTRAINT_VIOLATION, "NULL value not allowed for NOT NULL column: " + columnName), columnSchema.getType()));
+                        }
                     }
 
                     rowBuilder.add(expression);
@@ -850,10 +871,11 @@ class QueryPlanner
 
             List<io.trino.sql.tree.Expression> constraints = analysis.getCheckConstraints(mergeAnalysis.getTargetTable());
             if (!constraints.isEmpty()) {
-                assignments.putIdentity(uniqueIdSymbol);
+                assignments.putIdentity(targetUniqueIdSymbol);
+                assignments.putIdentity(sourceUniqueIdSymbol);
                 assignments.putIdentity(presentColumn);
                 assignments.putIdentity(rowIdSymbol);
-                assignments.putIdentities(source.getFieldMappings());
+                assignments.putIdentities(sourcePlanWithUniqueId.getFieldMappings());
                 subPlan = subPlan.withNewRoot(new ProjectNode(
                         idAllocator.getNextId(),
                         subPlan.getRoot(),
@@ -862,7 +884,7 @@ class QueryPlanner
             }
         }
 
-        Case caseExpression = new Case(
+        Expression caseExpression = new Case(
                 whenClauses.build(),
                 new Constant(
                         RowType.anonymous(ImmutableList.<Type>builder()
@@ -883,7 +905,15 @@ class QueryPlanner
             Symbol symbol = planWithPresentColumn.getFieldMappings().get(fieldIndex);
             projectionAssignmentsBuilder.putIdentity(symbol);
         }
-        projectionAssignmentsBuilder.putIdentity(uniqueIdSymbol);
+
+        // Assigns a unique id to each joined row
+        // The target table unique_id for matches, and the source table unique_id for non-matches
+        // Avoid the scenario where unique_id values become null after right join due to unmatched rows.
+        // It can improve performance and parallelism when handling non-matches in a mark distinct operation.
+        Symbol uniqueIdSymbol = symbolAllocator.newSymbol("unique_id", BIGINT);
+        Expression uniqueIdExpression = new Coalesce(targetUniqueIdSymbol.toSymbolReference(), sourceUniqueIdSymbol.toSymbolReference());
+
+        projectionAssignmentsBuilder.put(uniqueIdSymbol, uniqueIdExpression);
         projectionAssignmentsBuilder.putIdentity(rowIdSymbol);
         projectionAssignmentsBuilder.put(mergeRowSymbol, caseExpression);
 
@@ -903,13 +933,12 @@ class QueryPlanner
 
         // Mark distinct combinations of the unique_id value and the case_number
         Symbol isDistinctSymbol = symbolAllocator.newSymbol("is_distinct", BOOLEAN);
-        MarkDistinctNode markDistinctNode = new MarkDistinctNode(idAllocator.getNextId(), project, isDistinctSymbol, ImmutableList.of(uniqueIdSymbol, caseNumberSymbol), Optional.empty());
+        MarkDistinctNode markDistinctNode = new MarkDistinctNode(idAllocator.getNextId(), project, isDistinctSymbol, ImmutableList.of(uniqueIdSymbol, caseNumberSymbol));
 
-        // Raise an error if unique_id symbol is non-null and the unique_id/case_number combination was not distinct
+        // The unique_id which originates from either the source or target table will not be null
+        // Raise an error if the unique_id/case_number combination was not distinct
         Expression filter = ifExpression(
-                Logical.and(
-                        not(metadata, isDistinctSymbol.toSymbolReference()),
-                        not(metadata, new IsNull(uniqueIdSymbol.toSymbolReference()))),
+                not(metadata, isDistinctSymbol.toSymbolReference()),
                 new Cast(
                         failFunction(metadata, MERGE_TARGET_ROW_MULTIPLE_MATCHES, "One MERGE target table row matched more than one source row"),
                         BOOLEAN),
@@ -942,7 +971,8 @@ class QueryPlanner
                 Optional.empty(),
                 metadata.getTableName(session, handle).getSchemaTableName(),
                 mergeParadigmAndTypes,
-                findSourceTableHandles(planNode));
+                findSourceTableHandles(planNode),
+                mergeAnalysis.getUpdateCaseColumnHandles());
 
         ImmutableList.Builder<Symbol> columnSymbolsBuilder = ImmutableList.builder();
         for (ColumnHandle columnHandle : mergeAnalysis.getDataColumnHandles()) {
@@ -957,11 +987,13 @@ class QueryPlanner
         }
 
         Symbol operationSymbol = symbolAllocator.newSymbol("operation", TINYINT);
+        Symbol caseNumberSymbol = symbolAllocator.newSymbol("case_number", INTEGER);
         Symbol insertFromUpdateSymbol = symbolAllocator.newSymbol("insert_from_update", TINYINT);
 
         List<Symbol> projectedSymbols = ImmutableList.<Symbol>builder()
                 .addAll(columnSymbols)
                 .add(operationSymbol)
+                .add(caseNumberSymbol)
                 .add(rowIdSymbol)
                 .add(insertFromUpdateSymbol)
                 .build();
@@ -1117,13 +1149,13 @@ class QueryPlanner
 
         ImmutableList.Builder<io.trino.sql.tree.Expression> inputBuilder = ImmutableList.builder();
         analysis.getAggregates(node).stream()
-                .map(io.trino.sql.tree.FunctionCall::getArguments)
+                .map(FunctionCall::getArguments)
                 .flatMap(List::stream)
                 .filter(expression -> !(expression instanceof LambdaExpression)) // lambda expression is generated at execution time
                 .forEach(inputBuilder::add);
 
         analysis.getAggregates(node).stream()
-                .map(io.trino.sql.tree.FunctionCall::getOrderBy)
+                .map(FunctionCall::getOrderBy)
                 .map(NodeUtils::getSortItemsFromOrderBy)
                 .flatMap(List::stream)
                 .map(SortItem::getSortKey)
@@ -1131,7 +1163,7 @@ class QueryPlanner
 
         // filter expressions need to be projected first
         analysis.getAggregates(node).stream()
-                .map(io.trino.sql.tree.FunctionCall::getFilter)
+                .map(FunctionCall::getFilter)
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .forEach(inputBuilder::add);
@@ -1247,12 +1279,12 @@ class QueryPlanner
         return new GroupingSetsPlan(subPlan, columnOnlyGroupingSets, groupingSets, groupIdSymbol);
     }
 
-    private PlanBuilder planAggregation(PlanBuilder subPlan, List<List<Symbol>> groupingSets, Optional<Symbol> groupIdSymbol, List<io.trino.sql.tree.FunctionCall> aggregates, Function<io.trino.sql.tree.Expression, Symbol> coercions)
+    private PlanBuilder planAggregation(PlanBuilder subPlan, List<List<Symbol>> groupingSets, Optional<Symbol> groupIdSymbol, List<FunctionCall> aggregates, Function<io.trino.sql.tree.Expression, Symbol> coercions)
     {
         ImmutableList.Builder<AggregationAssignment> aggregateMappingBuilder = ImmutableList.builder();
 
         // deduplicate based on scope-aware equality
-        for (io.trino.sql.tree.FunctionCall function : scopeAwareDistinct(subPlan, aggregates)) {
+        for (FunctionCall function : scopeAwareDistinct(subPlan, aggregates)) {
             Symbol symbol = symbolAllocator.newSymbol(function.getName().toString(), analysis.getType(function));
 
             // TODO: for ORDER BY arguments, rewrite them such that they match the actual arguments to the function. This is necessary to maintain the semantics of DISTINCT + ORDER BY,
@@ -1284,7 +1316,7 @@ class QueryPlanner
             }
         }
 
-        ImmutableList.Builder<Symbol> groupingKeys = ImmutableList.builder();
+        ImmutableSet.Builder<Symbol> groupingKeys = ImmutableSet.builder();
         groupingSets.stream()
                 .flatMap(List::stream)
                 .distinct()
@@ -1302,7 +1334,6 @@ class QueryPlanner
                         globalGroupingSets.build()),
                 ImmutableList.of(),
                 AggregationNode.Step.SINGLE,
-                Optional.empty(),
                 groupIdSymbol);
 
         return new PlanBuilder(
@@ -1336,7 +1367,7 @@ class QueryPlanner
             // ORDER BY x DESC, x ASC, y --> ORDER BY x DESC, y
             if (!orders.containsKey(symbol)) {
                 symbols.add(symbol);
-                orders.put(symbol, OrderingTranslator.sortItemToSortOrder(items.get(i)));
+                orders.put(symbol, sortItemToSortOrder(items.get(i)));
             }
         }
 
@@ -1375,7 +1406,7 @@ class QueryPlanner
 
         // compute the cross product of the partial sets
         List<Set<FieldId>> allSets = new ArrayList<>();
-        partialSets.get(0)
+        partialSets.getFirst()
                 .stream()
                 .map(ImmutableSet::copyOf)
                 .forEach(allSets::add);
@@ -1414,23 +1445,24 @@ class QueryPlanner
                 analysis.getGroupingOperations(node),
                 symbolAllocator,
                 idAllocator,
-                (translations, groupingOperation) -> rewriteGroupingOperation(groupingOperation, analysis.getType(groupingOperation), descriptor, analysis.getColumnReferenceFields(), groupIdSymbol, plannerContext.getMetadata()),
-                (translations, groupingOperation) -> false);
+                (_, groupingOperation) -> rewriteGroupingOperation(groupingOperation, analysis.getType(groupingOperation), descriptor, analysis.getColumnReferenceFields(), groupIdSymbol, plannerContext.getMetadata()),
+                (_, _) -> false);
     }
 
-    private PlanBuilder planWindowFunctions(Node node, PlanBuilder subPlan, List<io.trino.sql.tree.FunctionCall> windowFunctions)
+    private PlanBuilder planWindowFunctions(Node node, PlanBuilder subPlan, List<FunctionCall> windowFunctions)
     {
         if (windowFunctions.isEmpty()) {
             return subPlan;
         }
 
-        Map<ResolvedWindow, List<io.trino.sql.tree.FunctionCall>> functions = scopeAwareDistinct(subPlan, windowFunctions)
+        // Need to preserve order of windows and window functions in each window to ensure deterministic query plans
+        Map<ResolvedWindow, List<FunctionCall>> functions = scopeAwareDistinct(subPlan, windowFunctions)
                 .stream()
-                .collect(Collectors.groupingBy(analysis::getWindow));
+                .collect(Collectors.groupingBy(analysis::getWindow, LinkedHashMap::new, toUnmodifiableList()));
 
-        for (Map.Entry<ResolvedWindow, List<io.trino.sql.tree.FunctionCall>> entry : functions.entrySet()) {
+        for (Map.Entry<ResolvedWindow, List<FunctionCall>> entry : functions.entrySet()) {
             ResolvedWindow window = entry.getKey();
-            List<io.trino.sql.tree.FunctionCall> functionCalls = entry.getValue();
+            List<FunctionCall> functionCalls = entry.getValue();
 
             // Pre-project inputs.
             // Predefined window parts (specified in WINDOW clause) can only use source symbols, and no output symbols.
@@ -1453,10 +1485,13 @@ class QueryPlanner
                 }
             }
 
-            for (io.trino.sql.tree.FunctionCall windowFunction : functionCalls) {
+            for (FunctionCall windowFunction : functionCalls) {
                 inputsBuilder.addAll(windowFunction.getArguments().stream()
                                 .filter(argument -> !(argument instanceof LambdaExpression)) // lambda expression is generated at execution time
                                 .collect(Collectors.toList()));
+                inputsBuilder.addAll(getSortItemsFromOrderBy(windowFunction.getOrderBy()).stream()
+                        .map(SortItem::getSortKey)
+                        .iterator());
             }
 
             List<io.trino.sql.tree.Expression> inputs = inputsBuilder.build();
@@ -1562,7 +1597,7 @@ class QueryPlanner
         // Then, coerce the sortKey so that we can add / subtract the offset.
         // Note: for that we cannot rely on the usual mechanism of using the coerce() method. The coerce() method can only handle one coercion for a node,
         // while the sortKey node might require several different coercions, e.g. one for frame start and one for frame end.
-        io.trino.sql.tree.Expression sortKey = Iterables.getOnlyElement(window.getOrderBy().orElseThrow().getSortItems()).getSortKey();
+        io.trino.sql.tree.Expression sortKey = getOnlyElement(window.getOrderBy().orElseThrow().getSortItems()).getSortKey();
         Symbol sortKeyCoercedForFrameBoundCalculation = coercions.get(sortKey);
         Optional<Type> coercion = frameOffset.map(analysis::getSortKeyCoercionForFrameBoundCalculation);
         if (coercion.isPresent()) {
@@ -1724,7 +1759,7 @@ class QueryPlanner
 
     private PlanBuilder planWindow(
             PlanBuilder subPlan,
-            List<io.trino.sql.tree.FunctionCall> windowFunctions,
+            List<FunctionCall> windowFunctions,
             ResolvedWindow window,
             PlanAndMappings coercions,
             Optional<Symbol> frameStartSymbol,
@@ -1762,7 +1797,7 @@ class QueryPlanner
         ImmutableMap.Builder<ScopeAware<io.trino.sql.tree.Expression>, Symbol> mappings = ImmutableMap.builder();
         ImmutableMap.Builder<Symbol, WindowNode.Function> functions = ImmutableMap.builder();
 
-        for (io.trino.sql.tree.FunctionCall windowFunction : windowFunctions) {
+        for (FunctionCall windowFunction : windowFunctions) {
             Symbol newSymbol = symbolAllocator.newSymbol(windowFunction.getName().toString(), analysis.getType(windowFunction));
 
             NullTreatment nullTreatment = windowFunction.getNullTreatment()
@@ -1778,8 +1813,10 @@ class QueryPlanner
                                 return coercions.get(argument).toSymbolReference();
                             })
                             .collect(toImmutableList()),
+                    windowFunction.getOrderBy().map(orderBy -> translateOrderingScheme(orderBy.getSortItems(), coercions::get)),
                     frame,
-                    nullTreatment == NullTreatment.IGNORE);
+                    nullTreatment == NullTreatment.IGNORE,
+                    windowFunction.isDistinct());
 
             functions.put(newSymbol, function);
             mappings.put(scopeAwareKey(windowFunction, analysis, subPlan.getScope()), newSymbol);
@@ -1794,12 +1831,11 @@ class QueryPlanner
                         subPlan.getRoot(),
                         specification,
                         functions.buildOrThrow(),
-                        Optional.empty(),
                         ImmutableSet.of(),
                         0));
     }
 
-    private WindowFrameType mapWindowFrameType(WindowFrame.Type type)
+    private static WindowFrameType mapWindowFrameType(WindowFrame.Type type)
     {
         return switch (type) {
             case RANGE -> WindowFrameType.RANGE;
@@ -1808,7 +1844,7 @@ class QueryPlanner
         };
     }
 
-    private FrameBoundType mapFrameBoundType(FrameBound.Type type)
+    private static FrameBoundType mapFrameBoundType(FrameBound.Type type)
     {
         return switch (type) {
             case UNBOUNDED_PRECEDING -> FrameBoundType.UNBOUNDED_PRECEDING;
@@ -1821,7 +1857,7 @@ class QueryPlanner
 
     private PlanBuilder planPatternRecognition(
             PlanBuilder subPlan,
-            List<io.trino.sql.tree.FunctionCall> windowFunctions,
+            List<FunctionCall> windowFunctions,
             ResolvedWindow window,
             PlanAndMappings coercions,
             Optional<Symbol> frameEndSymbol)
@@ -1843,7 +1879,7 @@ class QueryPlanner
         ImmutableMap.Builder<ScopeAware<io.trino.sql.tree.Expression>, Symbol> mappings = ImmutableMap.builder();
         ImmutableMap.Builder<Symbol, WindowNode.Function> functions = ImmutableMap.builder();
 
-        for (io.trino.sql.tree.FunctionCall windowFunction : windowFunctions) {
+        for (FunctionCall windowFunction : windowFunctions) {
             Symbol newSymbol = symbolAllocator.newSymbol(windowFunction.getName().toString(), analysis.getType(windowFunction));
 
             NullTreatment nullTreatment = windowFunction.getNullTreatment()
@@ -1859,8 +1895,10 @@ class QueryPlanner
                                 return coercions.get(argument).toSymbolReference();
                             })
                             .collect(toImmutableList()),
+                    Optional.empty(),
                     baseFrame,
-                    nullTreatment == NullTreatment.IGNORE);
+                    nullTreatment == NullTreatment.IGNORE,
+                    false);
 
             functions.put(newSymbol, function);
             mappings.put(scopeAwareKey(windowFunction, analysis, subPlan.getScope()), newSymbol);
@@ -1884,7 +1922,6 @@ class QueryPlanner
                         idAllocator.getNextId(),
                         subPlan.getRoot(),
                         specification,
-                        Optional.empty(),
                         ImmutableSet.of(),
                         0,
                         functions.buildOrThrow(),
@@ -2027,7 +2064,6 @@ class QueryPlanner
                         idAllocator.getNextId(),
                         subPlan.getRoot(),
                         specification,
-                        Optional.empty(),
                         ImmutableSet.of(),
                         0,
                         ImmutableMap.of(),
@@ -2230,7 +2266,7 @@ class QueryPlanner
     {
         if (limit.isPresent() && analysis.getLimit(limit.get()).isPresent()) {
             Optional<OrderingScheme> tiesResolvingScheme = Optional.empty();
-            if (limit.get() instanceof FetchFirst && ((FetchFirst) limit.get()).isWithTies()) {
+            if (limit.get() instanceof FetchFirst fetchFirst && fetchFirst.isWithTies()) {
                 tiesResolvingScheme = orderingScheme;
             }
             return subPlan.withNewRoot(
