@@ -17,6 +17,7 @@ import com.google.api.core.ApiFuture;
 import com.google.cloud.bigquery.BigQueryException;
 import com.google.cloud.bigquery.DatasetId;
 import com.google.cloud.bigquery.DatasetInfo;
+import com.google.cloud.bigquery.ExternalTableDefinition;
 import com.google.cloud.bigquery.Field;
 import com.google.cloud.bigquery.QueryJobConfiguration;
 import com.google.cloud.bigquery.QueryParameterValue;
@@ -67,6 +68,7 @@ import io.trino.spi.connector.ConnectorTransactionHandle;
 import io.trino.spi.connector.Constraint;
 import io.trino.spi.connector.ConstraintApplicationResult;
 import io.trino.spi.connector.InMemoryRecordSet;
+import io.trino.spi.connector.LimitApplicationResult;
 import io.trino.spi.connector.ProjectionApplicationResult;
 import io.trino.spi.connector.RecordCursor;
 import io.trino.spi.connector.RelationCommentMetadata;
@@ -112,9 +114,13 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.google.cloud.bigquery.StandardSQLTypeName.INT64;
+import static com.google.cloud.bigquery.TableDefinition.Type.EXTERNAL;
+import static com.google.cloud.bigquery.TableDefinition.Type.MATERIALIZED_VIEW;
+import static com.google.cloud.bigquery.TableDefinition.Type.VIEW;
 import static com.google.cloud.bigquery.storage.v1.WriteStream.Type.COMMITTED;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkState;
+import static com.google.common.base.Strings.isNullOrEmpty;
 import static com.google.common.base.Verify.verify;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.collect.ImmutableMap.toImmutableMap;
@@ -131,6 +137,7 @@ import static io.trino.plugin.bigquery.BigQueryErrorCode.BIGQUERY_UNSUPPORTED_OP
 import static io.trino.plugin.bigquery.BigQueryPseudoColumn.PARTITION_DATE;
 import static io.trino.plugin.bigquery.BigQueryPseudoColumn.PARTITION_TIME;
 import static io.trino.plugin.bigquery.BigQuerySessionProperties.isProjectionPushdownEnabled;
+import static io.trino.plugin.bigquery.BigQuerySessionProperties.isSkipViewMaterialization;
 import static io.trino.plugin.bigquery.BigQueryTableHandle.BigQueryPartitionType.INGESTION;
 import static io.trino.plugin.bigquery.BigQueryTableHandle.getPartitionType;
 import static io.trino.plugin.bigquery.BigQueryUtil.isWildcardTable;
@@ -182,7 +189,6 @@ public class BigQueryMetadata
     @Override
     public List<String> listSchemaNames(ConnectorSession session)
     {
-        log.debug("listSchemaNames(session=%s)", session);
         return listRemoteSchemaNames(session).stream()
                 .map(schema -> schema.toLowerCase(ENGLISH))
                 .collect(toImmutableList());
@@ -215,7 +221,6 @@ public class BigQueryMetadata
         DatasetId localDatasetId = client.toDatasetId(schemaName);
 
         // Overridden to make sure an error message is returned in case of an ambiguous schema name
-        log.debug("schemaExists(session=%s)", session);
         return client.toRemoteDataset(localDatasetId)
                 .map(RemoteDatabaseObject::getOnlyRemoteName)
                 .filter(remoteSchema -> client.getDataset(DatasetId.of(localDatasetId.getProject(), remoteSchema)) != null)
@@ -227,7 +232,6 @@ public class BigQueryMetadata
     {
         BigQueryClient client = bigQueryClientFactory.create(session);
 
-        log.debug("listTables(session=%s, schemaName=%s)", session, schemaName);
         String projectId;
 
         Set<String> remoteSchemaNames;
@@ -253,17 +257,9 @@ public class BigQueryMetadata
 
     private List<SchemaTableName> listTablesInRemoteSchema(BigQueryClient client, String projectId, String remoteSchemaName)
     {
-        ImmutableList.Builder<SchemaTableName> tableNames = ImmutableList.builder();
         try {
             Iterable<TableId> tableIds = client.listTableIds(DatasetId.of(projectId, remoteSchemaName));
-            for (TableId tableId : tableIds) {
-                // filter ambiguous tables
-                client.toRemoteTable(projectId, remoteSchemaName, tableId.getTable().toLowerCase(ENGLISH), tableIds)
-                        .filter(RemoteDatabaseObject::isAmbiguous)
-                        .ifPresentOrElse(
-                                remoteTable -> log.debug("Filtered out [%s.%s] from list of tables due to ambiguous name", remoteSchemaName, tableId.getTable()),
-                                () -> tableNames.add(new SchemaTableName(client.toSchemaName(DatasetId.of(projectId, tableId.getDataset())), tableId.getTable())));
-            }
+            return client.listNonAmbiguousSchemaTableNames(projectId, remoteSchemaName, tableIds);
         }
         catch (TrinoException e) {
             if (e.getErrorCode() == BIGQUERY_LISTING_TABLE_ERROR.toErrorCode() &&
@@ -272,12 +268,10 @@ public class BigQueryMetadata
                     bigQueryException.getMessage().contains("Not found: Dataset")) {
                 // Dataset not found error is ignored because listTables is used for metadata queries (SELECT FROM information_schema)
                 log.debug("Dataset disappeared during listing operation: %s", remoteSchemaName);
+                return ImmutableList.of();
             }
-            else {
-                throw e;
-            }
+            throw e;
         }
-        return tableNames.build();
     }
 
     @Override
@@ -326,7 +320,6 @@ public class BigQueryMetadata
         }
 
         BigQueryClient client = bigQueryClientFactory.create(session);
-        log.debug("getTableHandle(session=%s, schemaTableName=%s)", session, schemaTableName);
         DatasetId localDatasetId = client.toDatasetId(schemaTableName.getSchemaName());
         String remoteSchemaName = client.toRemoteDataset(localDatasetId)
                 .map(RemoteDatabaseObject::getOnlyRemoteName)
@@ -340,8 +333,9 @@ public class BigQueryMetadata
             return null;
         }
 
+        boolean useStorageApi = useStorageApi(session, schemaTableName.getTableName(), tableInfo.get().getDefinition());
         ImmutableList.Builder<BigQueryColumnHandle> columns = ImmutableList.builder();
-        columns.addAll(client.buildColumnHandles(tableInfo.get()));
+        columns.addAll(client.buildColumnHandles(tableInfo.get(), useStorageApi));
         Optional<BigQueryPartitionType> partitionType = getPartitionType(tableInfo.get().getDefinition());
         if (partitionType.isPresent() && partitionType.get() == INGESTION) {
             columns.add(PARTITION_DATE.getColumnHandle());
@@ -352,10 +346,41 @@ public class BigQueryMetadata
                 new RemoteTableName(tableInfo.get().getTableId()),
                 tableInfo.get().getDefinition().getType().toString(),
                 partitionType,
-                Optional.ofNullable(tableInfo.get().getDescription())),
+                Optional.ofNullable(tableInfo.get().getDescription()),
+                useStorageApi),
                 TupleDomain.all(),
-                Optional.empty())
+                Optional.empty(),
+                OptionalLong.empty())
                 .withProjectedColumns(columns.build());
+    }
+
+    private static boolean useStorageApi(ConnectorSession session, String tableName, TableDefinition tableDefinition)
+    {
+        TableDefinition.Type type = tableDefinition.getType();
+        if (isWildcardTable(type, tableName)) {
+            // Storage API doesn't support reading wildcard tables
+            return false;
+        }
+        if (type == EXTERNAL && !isBigLakeTable(tableDefinition)) {
+            // Storage API doesn't support reading external tables except BigLake tables
+            return false;
+        }
+        if ((type == VIEW || type == MATERIALIZED_VIEW) && isSkipViewMaterialization(session)) {
+            return false;
+        }
+        return true;
+    }
+
+    private static boolean isBigLakeTable(TableDefinition tableDefinition)
+    {
+        if (tableDefinition instanceof ExternalTableDefinition externalTableDefinition) {
+            //BigLake tables are external with connectionId that don't have objectMetadata (ObjectTable discriminator) and their uri starts with gs:// (OMNI table discriminator)
+            List<String> sourceUris = externalTableDefinition.getSourceUris();
+            return !isNullOrEmpty(externalTableDefinition.getConnectionId()) &&
+                    isNullOrEmpty(externalTableDefinition.getObjectMetadata()) &&
+                    (sourceUris != null && sourceUris.stream().allMatch(uri -> uri.startsWith("gs://")));
+        }
+        return false;
     }
 
     private Optional<TableInfo> getTableInfoIgnoringConflicts(ConnectorSession session, SchemaTableName schemaTableName)
@@ -375,7 +400,6 @@ public class BigQueryMetadata
     public ConnectorTableMetadata getTableMetadata(ConnectorSession session, ConnectorTableHandle tableHandle)
     {
         BigQueryClient client = bigQueryClientFactory.create(session);
-        log.debug("getTableMetadata(session=%s, tableHandle=%s)", session, tableHandle);
         BigQueryTableHandle handle = (BigQueryTableHandle) tableHandle;
 
         List<ColumnMetadata> columns = client.getColumns(handle).stream()
@@ -422,24 +446,9 @@ public class BigQueryMetadata
     @Override
     public Map<String, ColumnHandle> getColumnHandles(ConnectorSession session, ConnectorTableHandle tableHandle)
     {
-        BigQueryClient client = bigQueryClientFactory.create(session);
-        log.debug("getColumnHandles(session=%s, tableHandle=%s)", session, tableHandle);
-
         BigQueryTableHandle table = (BigQueryTableHandle) tableHandle;
-        if (table.projectedColumns().isPresent()) {
-            return table.projectedColumns().get().stream()
-                    .collect(toImmutableMap(columnHandle -> columnHandle.getColumnMetadata().getName(), identity()));
-        }
-
-        checkArgument(table.isNamedRelation(), "Cannot get columns for %s", tableHandle);
-
-        ImmutableList.Builder<BigQueryColumnHandle> columns = ImmutableList.builder();
-        columns.addAll(client.getColumns(table));
-        if (table.asPlainTable().getPartitionType().isPresent() && table.asPlainTable().getPartitionType().get() == INGESTION) {
-            columns.add(PARTITION_DATE.getColumnHandle());
-            columns.add(PARTITION_TIME.getColumnHandle());
-        }
-        return columns.build().stream()
+        checkArgument(table.projectedColumns().isPresent(), "Project columns must be present: %s", table);
+        return table.projectedColumns().get().stream()
                 .collect(toImmutableMap(columnHandle -> columnHandle.getColumnMetadata().getName(), identity()));
     }
 
@@ -449,7 +458,6 @@ public class BigQueryMetadata
             ConnectorTableHandle tableHandle,
             ColumnHandle columnHandle)
     {
-        log.debug("getColumnMetadata(session=%s, tableHandle=%s, columnHandle=%s)", session, columnHandle, columnHandle);
         return ((BigQueryColumnHandle) columnHandle).getColumnMetadata();
     }
 
@@ -458,7 +466,6 @@ public class BigQueryMetadata
     public Map<SchemaTableName, List<ColumnMetadata>> listTableColumns(ConnectorSession session, SchemaTablePrefix prefix)
     {
         BigQueryClient client = bigQueryClientFactory.create(session);
-        log.debug("listTableColumns(session=%s, prefix=%s)", session, prefix);
         List<SchemaTableName> tables = prefix.toOptionalSchemaTableName()
                 .<List<SchemaTableName>>map(ImmutableList::of)
                 .orElseGet(() -> listTables(session, prefix.getSchema()));
@@ -470,7 +477,7 @@ public class BigQueryMetadata
         return tableInfos.stream()
                 .collect(toImmutableMap(
                         table -> new SchemaTableName(table.getTableId().getDataset(), table.getTableId().getTable()),
-                        table -> client.buildColumnHandles(table).stream()
+                        table -> client.buildColumnHandles(table, useStorageApi(session, table.getTableId().getTable(), table.getDefinition())).stream()
                                 .map(BigQueryColumnHandle::getColumnMetadata)
                                 .collect(toImmutableList())));
     }
@@ -478,7 +485,7 @@ public class BigQueryMetadata
     protected <T, R> Stream<R> processInParallel(List<T> list, Function<T, R> function)
     {
         if (list.size() == 1) {
-            return Stream.of(function.apply(list.get(0)));
+            return Stream.of(function.apply(list.getFirst()));
         }
 
         List<ListenableFuture<R>> futures = list.stream()
@@ -818,10 +825,10 @@ public class BigQueryMetadata
     }
 
     @Override
-    public ConnectorMergeTableHandle beginMerge(ConnectorSession session, ConnectorTableHandle tableHandle, RetryMode retryMode)
+    public ConnectorMergeTableHandle beginMerge(ConnectorSession session, ConnectorTableHandle tableHandle, Map<Integer, Collection<ColumnHandle>> updateCaseColumns, RetryMode retryMode)
     {
         // TODO Fix BaseBigQueryFailureRecoveryTest when implementing this method
-        return ConnectorMetadata.super.beginMerge(session, tableHandle, retryMode);
+        return ConnectorMetadata.super.beginMerge(session, tableHandle, updateCaseColumns, retryMode);
     }
 
     @Override
@@ -894,8 +901,6 @@ public class BigQueryMetadata
             List<ConnectorExpression> projections,
             Map<String, ColumnHandle> assignments)
     {
-        log.debug("applyProjection(session=%s, handle=%s, projections=%s, assignments=%s)",
-                session, handle, projections, assignments);
         BigQueryTableHandle bigQueryTableHandle = (BigQueryTableHandle) handle;
         if (!isProjectionPushdownEnabled(session)) {
             List<ColumnHandle> newColumns = ImmutableList.copyOf(assignments.values());
@@ -1049,8 +1054,6 @@ public class BigQueryMetadata
             ConnectorTableHandle handle,
             Constraint constraint)
     {
-        log.debug("applyFilter(session=%s, handle=%s, summary=%s, predicate=%s, columns=%s)",
-                session, handle, constraint.getSummary(), constraint.predicate(), constraint.getPredicateColumns());
         BigQueryTableHandle bigQueryTableHandle = (BigQueryTableHandle) handle;
 
         TupleDomain<ColumnHandle> oldDomain = bigQueryTableHandle.constraint();
@@ -1089,13 +1092,36 @@ public class BigQueryMetadata
     }
 
     @Override
-    public Optional<TableFunctionApplicationResult<ConnectorTableHandle>> applyTableFunction(ConnectorSession session, ConnectorTableFunctionHandle handle)
+    public Optional<LimitApplicationResult<ConnectorTableHandle>> applyLimit(ConnectorSession session, ConnectorTableHandle handle, long limit)
     {
-        if (!(handle instanceof QueryHandle)) {
+        BigQueryTableHandle table = (BigQueryTableHandle) handle;
+
+        if (table.limit().isPresent() && table.limit().getAsLong() <= limit) {
             return Optional.empty();
         }
 
-        ConnectorTableHandle tableHandle = ((QueryHandle) handle).getTableHandle();
+        if (!isLimitPushdownSupported(table)) {
+            return Optional.empty();
+        }
+
+        return Optional.of(new LimitApplicationResult<>(table.withLimit(limit), true, false));
+    }
+
+    private static boolean isLimitPushdownSupported(BigQueryTableHandle table)
+    {
+        return table.isQueryRelation()
+                // Storage API doesn't support limiting rows
+                || (table.isNamedRelation() && !table.getRequiredNamedRelation().isUseStorageApi());
+    }
+
+    @Override
+    public Optional<TableFunctionApplicationResult<ConnectorTableHandle>> applyTableFunction(ConnectorSession session, ConnectorTableFunctionHandle handle)
+    {
+        if (!(handle instanceof QueryHandle queryHandle)) {
+            return Optional.empty();
+        }
+
+        ConnectorTableHandle tableHandle = queryHandle.getTableHandle();
         List<ColumnHandle> columnHandles = ImmutableList.copyOf(getColumnHandles(session, tableHandle).values());
         return Optional.of(new TableFunctionApplicationResult<>(tableHandle, columnHandles));
     }
