@@ -53,6 +53,7 @@ import java.util.concurrent.Callable;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static com.google.common.collect.ImmutableList.toImmutableList;
+import static io.trino.testing.SystemEnvironmentUtils.isEnvSet;
 import static io.trino.tests.product.launcher.env.DockerContainer.cleanOrCreateHostPath;
 import static io.trino.tests.product.launcher.env.EnvironmentContainers.TESTS;
 import static io.trino.tests.product.launcher.env.EnvironmentListener.getStandardListeners;
@@ -155,6 +156,7 @@ public final class TestRun
         private final EnvironmentFactory environmentFactory;
         private final boolean debug;
         private final boolean debugSuspend;
+        private final boolean ipv6;
         private final JdkProvider jdkProvider;
         private final File testJar;
         private final File cliJar;
@@ -185,6 +187,7 @@ public final class TestRun
             this.environmentFactory = requireNonNull(environmentFactory, "environmentFactory is null");
             requireNonNull(environmentOptions, "environmentOptions is null");
             this.debug = environmentOptions.debug;
+            this.ipv6 = environmentOptions.ipv6;
             this.debugSuspend = testRunOptions.debugSuspend;
             this.jdkProvider = requireNonNull(jdkProvider, "jdkProvider is null");
             this.testJar = requireNonNull(testRunOptions.testJar, "testRunOptions.testJar is null");
@@ -305,7 +308,7 @@ public final class TestRun
                         .collect(toImmutableList());
                 testsContainer.dependsOn(environmentContainers);
 
-                log.info("Starting environment '%s' with config '%s' and options '%s'. Trino will be started using JAVA_HOME: %s.", this.environment, environmentConfig.getConfigName(), extraOptions, jdkProvider.getJavaHome());
+                log.info("Starting environment '%s' with config '%s' and options '%s'.", this.environment, environmentConfig.getConfigName(), extraOptions);
                 environment.start();
             }
             else {
@@ -322,7 +325,13 @@ public final class TestRun
             Environment.Builder builder = environmentFactory.get(environment, printStream, environmentConfig, extraOptions)
                     .setContainerOutputMode(outputMode)
                     .setStartupRetries(startupRetries)
-                    .setLogsBaseDir(logsDirBase);
+                    .setLogsBaseDir(logsDirBase)
+                    .setIpv6(ipv6);
+
+            if (isEnvSet("CONTINUOUS_INTEGRATION")) {
+                builder.configureContainers(container ->
+                        container.withEnv("CONTINUOUS_INTEGRATION", "true"));
+            }
 
             builder.configureContainer(TESTS, this::mountReportsDir);
             builder.configureContainer(TESTS, container -> {
@@ -335,25 +344,18 @@ public final class TestRun
                     unsafelyExposePort(container, 5007); // debug port
                 }
 
-                if (System.getenv("CONTINUOUS_INTEGRATION") != null) {
-                    container.withEnv("CONTINUOUS_INTEGRATION", "true");
-                }
-
                 // Install Java distribution if necessary
                 jdkProvider.applyTo(container)
                         // the test jar is hundreds MB and file system bind is much more efficient
                         .withFileSystemBind(testJar.getPath(), "/docker/test.jar", READ_ONLY)
                         .withFileSystemBind(cliJar.getPath(), "/docker/trino-cli", READ_ONLY)
                         .withCopyFileToContainer(forClasspathResource("docker/trino-product-tests/common/standard/set-trino-cli.sh"), "/etc/profile.d/set-trino-cli.sh")
-                        .withEnv("JAVA_HOME", jdkProvider.getJavaHome())
                         .withCommand(ImmutableList.<String>builder()
                                 .add(
-                                        jdkProvider.getJavaCommand(),
+                                        jdkProvider.getJavaHome() + "/bin/java",
                                         "-Xmx1g",
                                         "-Djava.util.logging.config.file=/docker/trino-product-tests/conf/tempto/logging.properties",
                                         "-Duser.timezone=Asia/Kathmandu",
-                                        // https://bugs.openjdk.org/browse/JDK-8327134
-                                        "-Djava.security.manager=allow",
                                         // Tempto has progress logging built in
                                         "-DProgressLoggingListener.enabled=false")
                                 .addAll(temptoJavaOptions)
